feat: google analytics added

--- a/bootcamp/templates/bootcamp/base.html
+++ b/bootcamp/templates/bootcamp/base.html
@@ -13,7 +13,17 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <title>Incwell Bootcamp</title>
-  </head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-139628199-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-139628199-1');
+  </script>
+  <!-- Google analytics end -->
+    </head>
   <body>
     {% block index %}
     
