feat: user can enroll and talk with mentors

--- a/bootcamp/templates/bootcamp/base.html
+++ b/bootcamp/templates/bootcamp/base.html
@@ -55,7 +55,7 @@
               <a href="#" class="navlink">Contact</a>
             </li>
             <li class="unset-nav">
-              <a href="#" class="navlink-Enroll"> Enroll</a>
+              <a href="{% url 'enroll' %}" class="navlink-Enroll"> Enroll</a>
             </li>
           </ul>
         </div>
