--- a/bootcamp/templates/bootcamp/layout.html
+++ b/bootcamp/templates/bootcamp/layout.html
@@ -3,6 +3,9 @@
 {% block index %}
 {% endblock index %}
 
+{% block script %}
+{% endblock script %}
+
 {% block courses %}
 {% endblock courses %}
 
