--- a/bootcamp/static/bootcamp/assets/style.css
+++ b/bootcamp/static/bootcamp/assets/style.css
@@ -85,21 +85,16 @@
 
 .grid-maker {
   margin-top: 8%;
-    display: grid;
-    grid-template-columns: 22% 22% 22% 22%;
-    grid-column-gap: 4%;
-    grid-row-gap: 35px;
-    margin-bottom: 100px;
+  display: grid;
+  grid-template-columns: 30% 30% 30%;
+  grid-column-gap: 50px;
 }
-/* .post{
-  margin: 5px 0;
-} */
 .box {
   width: 100%;
-    height: 323px;
-    overflow: hidden;
-    position: relative;
-    border-radius: 15px;
+  height: 60vh;
+  overflow: hidden;
+  position: relative;
+  border-radius: 15px;
 }
 .mentor-img {
   width: 100%;
@@ -114,9 +109,6 @@
   color: #fff;
 }
 
-.active{
-  color:red;
-}
 .name {
   text-transform: uppercase;
   font-size: 16px;
@@ -133,9 +125,10 @@
 }
 .social ul li {
   display: inline-block;
-  margin-right: 10px;
-  width: 31px;
-  height: 31px;
+
+  margin-right: 5px;
+  width: 35px;
+  height: 35px;
   text-align: center;
   border-radius: 50%;
   font-size: 18px;
@@ -207,7 +200,7 @@
   text-align: justify;
 }
 .course-img {
-  width: 77%;
+  width: 50%;
 }
 .helper {
   display: inline;
@@ -216,7 +209,6 @@
 }
 .imageholder {
   height: 50%;
-  margin-top: -15px;
 }
 .talk {
   background: #eb596b;
@@ -236,7 +228,6 @@
 .course-details-holder {
   height: 50%;
   position: relative;
-  margin-top: 20px;
 }
 .readmore {
   padding: 5px 0;
@@ -249,14 +240,11 @@
   /* margin: 0 auto; */
   padding: 40px 0;
 }
-.grid-maker-course 
-{
+.grid-maker-course {
   margin-top: 0%;
   display: grid;
   grid-template-columns: 30% 30% 30%;
   grid-column-gap: 50px;
-  grid-row-gap: 20px;
-  margin-bottom: 70px;
 }
 .navibar {
   margin-bottom: 0;
@@ -338,6 +326,19 @@
   height: 100%;
   overflow: hidden;
 }
+.background-image-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: 0;
+}
+.background-enroll-img {
+  height: 140%;
+  position: absolute;
+  right: -8%;
+  top: -17%;
+}
 .back-img {
   width: 78%;
   position: relative;
@@ -373,3 +374,156 @@
   border: none;
   padding: 5px 15px;
 }
+.internal-enroll-container {
+  width: fit-content;
+  display: grid;
+  grid-template-columns: 60% 35%;
+  grid-column-gap: 3%;
+}
+.image-enroll-container {
+  width: 100%;
+}
+.enrolling-img {
+  width: 100%;
+}
+.form-enroll-container {
+  z-index: 10;
+  height: 100%;
+  position: relative;
+}
+.courseName {
+  font-size: 26px;
+  color: #eb596b;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 10px;
+}
+.enroll-form {
+  background: #4543530d;
+  border-radius: 10px;
+  padding: 10px;
+}
+.form-row1 {
+  display: grid;
+  grid-template-columns: 30% 30% 30%;
+  grid-column-gap: 5%;
+}
+.form-row2 {
+  display: grid;
+  grid-template-columns: 60% 35%;
+  grid-column-gap: 5%;
+}
+.form-content input {
+  width: 100%;
+  border: none;
+  background: transparent;
+  border-bottom: 1px solid #aeabf9;
+}
+.form-content select {
+  width: 100%;
+  background: transparent;
+  border: 1px solid #cacaca;
+  color: #9ca1b4;
+  font-weight: bold;
+  height: 2rem;
+}
+.form-content {
+  position: relative;
+  margin-bottom: 45px;
+  padding: 5px;
+  margin: 10px 0;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.heading-form {
+}
+.fname {
+}
+.mname {
+}
+.lname {
+}
+.email {
+}
+.gender-choose {
+}
+.education {
+}
+.phone {
+}
+.project {
+}
+.course-choose {
+}
+.submit-container {
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+}
+.submit-button {
+  width: 100px;
+  padding: 8px;
+  font-size: 16px;
+}
+.form-enroll-cont {
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.helper {
+  display: inline;
+  height: 100%;
+  vertical-align: middle;
+}
+input:focus {
+  outline: none;
+}
+.z-depth-1,
+nav,
+.card-panel,
+.card,
+.toast,
+.btn,
+.btn-large,
+.btn-small,
+.btn-floating,
+.dropdown-content,
+.collapsible,
+.sidenav {
+  webkit-box-shadow: none!important;
+  box-shadow: none!important;
+}
+nav {
+  background: unset !important;
+}
+input:not([type]),
+input[type="text"]:not(.browser-default),
+input[type="password"]:not(.browser-default),
+input[type="email"]:not(.browser-default),
+input[type="url"]:not(.browser-default),
+input[type="time"]:not(.browser-default),
+input[type="date"]:not(.browser-default),
+input[type="datetime"]:not(.browser-default),
+input[type="datetime-local"]:not(.browser-default),
+input[type="tel"]:not(.browser-default),
+input[type="number"]:not(.browser-default),
+input[type="search"]:not(.browser-default),
+textarea.materialize-textarea {
+  height: 2rem!important;
+}
+select {
+  display: unset !important;
+}
+.input-field > label {
+  left: 5px!important;
+}
+
+input[type="text"]:not(.browser-default):focus:not([readonly]) {
+  border-bottom: 1px solid #26a69a!important;
+  -webkit-box-shadow: 0 1px 0 0 #26a69a!important;
+  box-shadow: 0 1px 0 0 #26a69a!important;
+}
+
+/* label color */
