--- a/bootcamp/templates/bootcamp/index.html
+++ b/bootcamp/templates/bootcamp/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="main-text">
           start your career path
-          <a href="{% url 'courses' %}"><button class="explore-button">Explore Now</button></a>
+          <a href="{% url 'courses' %}"><button class="wow fadeInLeft explore-button">Explore Now</button></a>
         </div>
       </div>
 {% endblock content %}
