--- a/bootcamp/templates/bootcamp/base.html
+++ b/bootcamp/templates/bootcamp/base.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="icon" href="{% static 'bootcamp/assets/logo.ico' %}">
     <link rel="stylesheet" href="{% static 'bootcamp/assets/bootstrap.css' %}"/>
     <script src="{% static 'bootcamp/assets/jquery.js' %}"></script>
     <script src="{% static 'bootcamp/assets/bootstrap.js' %}"></script>
@@ -15,6 +16,7 @@
     <title>Incwell Bootcamp</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-139628199-1"></script>
+  
   {% block script %}
 
 {% endblock script %}
@@ -24,6 +26,13 @@
     gtag('js', new Date());
 
     gtag('config', 'UA-139628199-1');
+  </script>
+  <link rel="stylesheet" href="{% static 'bootcamp/assets/wow/animate.css' %}"/>
+
+  <script src="{% static 'bootcamp/assets/wow/animate.js' %}"></script>
+
+  <script>
+    new WOW().init();
   </script>
   <!-- Google analytics end -->
     </head>
