refactor: some animation added

--- a/bootcamp/templates/bootcamp/mentors.html
+++ b/bootcamp/templates/bootcamp/mentors.html
@@ -20,9 +20,9 @@
           <div class="showcase-text-top">Meet Our Mentors!</div>
           <div class="showcase-text-bottom">How We Screen Applicants</div>
         </div>
-        <div class="showcase-cards">
+        <div class=" showcase-cards">
           <div class="showcase-card">
-            <img src="{% static 'bootcamp/assets/mentors-trophy.png' %}" />
+            <img src="{% static 'bootcamp/assets/mentors-trophy.png' %}" class="wow fadeInLeft"/>
             <div class="showcase-card-text-top">Technical Expertise</div>
             <div class="showcase-card-text-bottom">
               <div class="showcase-card-text-bottom-head">Body</div>
@@ -30,7 +30,7 @@
             </div>
           </div>
           <div class="showcase-card">
-            <img src="{% static 'bootcamp/assets/mentors-trophy.png' %}" />
+            <img src="{% static 'bootcamp/assets/mentors-trophy.png' %}" class="wow bounce" />
             <div class="showcase-card-text-top">Technical Expertise</div>
             <div class="showcase-card-text-bottom">
               <div class="showcase-card-text-bottom-head">Body</div>
@@ -38,7 +38,7 @@
             </div>
           </div>
           <div class="showcase-card">
-            <img src="{% static 'bootcamp/assets/mentors-trophy.png' %}" />
+            <img src="{% static 'bootcamp/assets/mentors-trophy.png' %}" class="wow fadeInRight"/>
             <div class="showcase-card-text-top">Technical Expertise</div>
             <div class="showcase-card-text-bottom">
               <div class="showcase-card-text-bottom-head">Body</div>
