--- a/bootcamp/templates/bootcamp/base.html
+++ b/bootcamp/templates/bootcamp/base.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="{% static 'bootcamp/assets/bootstrap.css' %}"/>
     <script src="{% static 'bootcamp/assets/jquery.js' %}"></script>
     <script src="{% static 'bootcamp/assets/bootstrap.js' %}"></script>
-    <link rel="stylesheet" href="{% static 'bootcamp/assets/style.css' %}" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
@@ -27,6 +26,8 @@
 
     gtag('config', 'UA-139628199-1');
   </script>
+    <link rel="stylesheet" href="{% static 'bootcamp/assets/style.css' %}" />
+
   <link rel="stylesheet" href="{% static 'bootcamp/assets/wow/animate.css' %}"/>
 
   <script src="{% static 'bootcamp/assets/wow/animate.js' %}"></script>
@@ -57,7 +58,7 @@
 
           <ul class="nav navbar-nav navbar-right">
             <li class="navlist">
-              <a href="#" class="navlink"> About Us</a>
+              <a href="#" class="navlink {% if request.path == '/about' %} active {% endif %}"> About Us</a>
             </li>
             <li class="navlist">
               <a href="{% url 'courses' %}" class="navlink {% if request.path == '/courses' %} active {% endif %}">Courses</a>
@@ -66,7 +67,7 @@
               <a href="{% url 'mentors' %}" class="navlink {% if request.path == '/mentors' %} active {% endif %}"> Mentors</a>
             </li>
             <li class="navlist">
-              <a href="#" class="navlink">Contact</a>
+              <a href="#" class="navlink {% if request.path == '/contact' %} active {% endif %}">Contact</a>
             </li>
             <li class="unset-nav">
               <a href="{% url 'enroll' %}" class="navlink-Enroll"> Enroll</a>
