--- a/bootcamp/templates/bootcamp/layout.html
+++ b/bootcamp/templates/bootcamp/layout.html
@@ -1,7 +1,13 @@
 {% extends "bootcamp/base.html" %}
 
+{% block mentors %}
+{% endblock mentors %}
+
 {% block index %}
 {% endblock index %}
+
+{% block script %}
+{% endblock script %}
 
 {% block courses %}
 {% endblock courses %}
