feat: about us content from database

--- a/bootcamp/templates/bootcamp/about.html
+++ b/bootcamp/templates/bootcamp/about.html
@@ -69,18 +69,7 @@
       <div class="AboutUs-title">About Us</div>
       <div class="aboutus-text-container-main">
         <div class="aboutus-text-container">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum hic
-          repellat fuga, doloribus aut, explicabo impedit dolores eligendi, sint
-          dolorum dignissimos magni dolore perspiciatis quod consequuntur itaque
-          quaerat et provident rem alias rerum! Placeat ipsum earum officia
-          laudantium soluta quibusdam, asperiores facilis veniam alias natus harum
-          fugit nesciunt! Suscipit cumque quos sunt porro, aperiam reiciendis
-          exercitationem ipsum deserunt magni sit veritatis ducimus delectus,
-          dolorum explicabo libero enim tenetur unde doloremque nisi quibusdam
-          pariatur quidem incidunt. Labore laudantium repellat facere laborum
-          ipsum, facilis numquam. Maiores atque, voluptas possimus, quos ipsa quis
-          assumenda facere asperiores deserunt explicabo dolores amet cum
-          consequuntur aut!
+          {{about_content.description}}
         </div>
       </div>
       <div class="aboutus-grids-container">
