--- a/bootcamp/templates/bootcamp/base.html
+++ b/bootcamp/templates/bootcamp/base.html
@@ -38,6 +38,7 @@
   <!-- Google analytics end -->
     </head>
   <body>
+    
     {% block mentors %}
     
     {% endblock mentors %}
@@ -48,7 +49,7 @@
     {% block courses %}
     
     {% endblock courses %}
-    <div class="body-container">
+    <div class="body-container mentor-main">
       <nav class="navbar navibar">
         <div class="container-fluid">
           <div class="navbar-header">
@@ -67,7 +68,7 @@
               <a href="{% url 'mentors' %}" class="navlink {% if request.path == '/mentors' %} nav-active {% endif %}"> Mentors</a>
             </li>
             <li class="navlist">
-              <a href="#" class="navlink {% if request.path == '/contact' %} nav-active {% endif %}">Contact</a>
+              <a href="{% url 'contact' %}" class="navlink {% if request.path == '/contact' %} nav-active {% endif %}">Contact</a>
             </li>
             <li class="unset-nav">
               <a href="{% url 'enroll' %}" class="navlink-Enroll"> Enroll</a>
