--- a/bootcamp/templates/bootcamp/courses.html
+++ b/bootcamp/templates/bootcamp/courses.html
@@ -29,7 +29,9 @@
                             </ul>
                             <div class="readmore"><i class="fa fa-angle-down"></i></div>
                         </div>
+                        <a href="{% url 'contact' %}">
                         <div class="talk">Talk to Advisor</div>
+                        </a>
                     </div>
                     </div>
                 </div>
