--- a/bootcamp/static/bootcamp/assets/style.css
+++ b/bootcamp/static/bootcamp/assets/style.css
@@ -592,7 +592,7 @@ input[type="text"]:not(.browser-default):focus:not([readonly]) {
 .bg-image-container {
   width: fit-content;
   margin: 0 auto;
-  background: #0071bb;
+  background: #719780;
   position: absolute;
   left: 0;
   right: 0;
